# full-stack-fastapi

./: docker-compose.override.yml  docker-compose.yml
backend/: pyproject.toml
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: main.tsx  utils.ts
frontend/src/client/: models.ts
frontend/src/routes/: login.tsx
src/: docker-compose.override.yml  docker-compose.yml
src/backend/: backend.dockerfile  celeryworker.dockerfile
src/backend/app/: pyproject.toml  requirements.txt  start.sh
src/backend/app/app/: models.py  worker.py
src/backend/app/app/core/: config.py  security.py
src/backend/app/app/db/: engine.py
src/frontend/: package-lock.json  package.json  pnpm-lock.yaml
src/frontend/src/: App.tsx
src/frontend/src/client/services/: UsersService.ts
src/frontend/src/components/organism/: mode-toggle.tsx  theme-provider.tsx  user-auth-form.tsx
src/frontend/src/components/ui/: icons.tsx
src/frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx
src/new-frontend/: package-lock.json  package.json
