[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.25.0"
fastapi = "^0.109.0"
python-multipart = "^0.0.6"
email-validator = "^2.1.0.post1"
celery = "^5.3.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.2.3"
pydantic = "^2.5.3"
emails = "^0.6"
gunicorn = "^21.2.0"
jinja2 = "^3.1.3"
alembic = "^1.13.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.26.0"
psycopg = {extras = ["binary"], version = "^3.1.17"}
sqlmodel = "^0.0.14"
sentry-sdk = "^1.39.2"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
black = "^23.12.1"
isort = "^5.13.2"
autoflake = "^2.2.1"
flake8 = "^7.0.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
